fix breadcrumb layout on firefox

--- a/src/protected/application/themes/BaseV1/assets/css/sass/application/_breadcrumb.scss
+++ b/src/protected/application/themes/BaseV1/assets/css/sass/application/_breadcrumb.scss
@@ -2,6 +2,7 @@
     list-style-type: none;
     overflow: hidden;
     margin: 0;
+    position: relative;
     @media screen and (max-width: 1366px) and (min-width: 1200px) {
         margin: 0 0 0 20%;
     }
@@ -45,6 +46,7 @@
                 height: 0;
                 position: absolute;
                 width: 0;
+                top: 0;
             }
 
             &:after {
@@ -52,7 +54,7 @@
                 border-left: 8px solid #fafafa;
                 border-top: 12px solid transparent;
                 margin-left: 1px;
-                margin-top: -23px;
+                margin-top: 1px;
                 z-index: 2;
             }
 
